--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    --header-green: #205522;
+    --brand-green: #076448;
+    --dark-green: #099268;
+    --medium-green: #20c997;
+    --text-color: #212529;
+    --gray: #868e96;
+    --light-gray: #f1f3f5;
+    --extra-light-gray: #f8f9fa;
+    --white: #fff;
+    box-sizing: border-box;
+    color: var(--text-color);
+}
+
+*,*::before,*::after {
+    box-sizing: inherit;
+}
+
+body {
+    margin: 0;
+    background-color: var(--extra-light-gray);
+}
+
+button {
+    padding-left: 1em;
+    padding-right:1em;
+    height:2.5em;
+    min-width: 6em;
+    border: 0;
+    letter-spacing: 0.2em;
+    font-size: 1rem;
+    color: white;
+    border-radius: 0.5em;
+    background-color: #57b;
+    box-shadow: 0 0.4em #148;
+    text-shadow: 1px 1px #148;
+}
+
+button:active {
+    background-color: #456ab5;
+    transform: translateY(0.1em);
+    box-shadow: 0 0.3em #148;
+}
+.main{
+    position:absolute;
+    left:0;right:0;top:0;bottom:0;
+    margin:0;
+    border:0;
+    display:flex;flex-flow:column nowrap;align-items: center;justify-content: center;
+
+}
